<?xml version = "1.0" encoding = "utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:background="@drawable/btn_back"
            android:id="@+id/ipaddressField"
            android:singleLine="true"
            android:hint="@string/hint"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/messageView"
            android:text="@string/nconnected"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:fontFamily="@font/roboto"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back"
                android:onClick="onAction"
                android:text="@string/connect"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:background="@drawable/btn_back_green_border"
                android:onClick="offAction"
                android:text="@string/disconnect"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:background="@drawable/btn_back"
                android:onClick="lOnAction"
                android:text="@string/lon"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:background="@drawable/btn_back_green_border"
                android:onClick="lOffAction"
                android:text="@string/loff"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back"
                android:fontFamily="@font/roboto"
                android:onClick="fOnAction"
                android:text="@string/fon"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:background="@drawable/btn_back_green_border"
                android:onClick="fOffAction"
                android:text="@string/foff"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto"
                android:layout_weight="1"
                android:background="@drawable/btn_back"
                android:onClick="aPersonAction"
                android:text="@string/accept"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back_green_border"
                android:fontFamily="@font/roboto"
                android:onClick="dPersonAction"
                android:text="@string/deny"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>